res/styles.css
*, *:before, *:after {
  /* https://css-tricks.com/international-box-sizing-awareness-day/ */
  box-sizing: border-box; 
}

body {
	font-family: "Segoe UI",Helvetica,Arial,sans-serif;
	font-size: 18px;
	line-height: 1.5;
	color: #24292e;
	background-color: #fff;
	padding: 0.5em;
	margin: 0;
}

header {
	margin: -0.5em -0.5em 0.5em -0.5em; /*TRBL*/
	padding: 0 0.5em 0.5em 0.5em;
	background-color: #222230;
	box-shadow: 0 0 5px 1px #334;
}
header > div {
	margin-left:auto;
	margin-right:auto;
	max-width:800px;
}

main {
	max-width: 800px;
	margin-right: auto;
	margin-left: auto;
}

header h1 {
	color: #fff;
	border-bottom: 1px solid #444;
	text-shadow: 0 0 5px #aaf;
}
h1 {
	color: #888;
	border-bottom: 1px solid #e0e0e0;
	padding: 0.2em 0 0.2em 0;
	margin: 0.5em 0 0.5em 0;
}
h2 {
	color: #448;
	padding: 0.2em 0 0.2em 0;
	margin: 1em 0 0.5em 0;
	margin-bottom: 0.2em;
	border-bottom: 1px solid #eaecef;
	font-size: 1.5em;
}

.post-date {
  display: block;
  margin-top: -0.5rem;
  margin-bottom: 0.5rem;
  color: #9a9a9a;
}

.tagline {
  margin-top: -0.7rem;
  margin-bottom: 0.5rem;
  font-size: 1.3rem;
  font-style: italic;
  font-family: serif;
  color: #888;
  /* I wanted the tagline and date to be shown on the same line, but 
	 display: run-in only works in IE so I'll nest tagline in post-date */
}
header .tagline { color: #CCC; }

